update Style.css fix bug about align button

--- a/SWStudio/Ex05/food-vote/src/components/FoodCard/Style.css
+++ b/SWStudio/Ex05/food-vote/src/components/FoodCard/Style.css
@@ -30,10 +30,13 @@ img{
     grid-template-columns: 5fr 2fr;
 }
 .vote {
-    padding-top: 1%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /* padding-top: 1%;
     margin-left: auto;
     margin-right: auto;
-    width:35%;
+    width:35%; */
 }
 .display-vote{
     margin-left: 2%;
@@ -42,7 +45,7 @@ img{
     background-color: rgb(117, 194, 0);
     color:purple;
     font-weight: 900;
-    font-size: 32px;
+    font-size: 28px;
     border: 2px solid black;
     border-radius: 10px;
 }
